Updated deprecated method to Long.valueOf()